# copacabana

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow/: unit.yml
.github/workflows/: linux.yml  macos.yml  meta.yml  packages.yml  unit.yml  windows.yml
copacabana/cmake/: copacabana.cmake  cpack.cmake  doxygen.cmake  install.cmake  make_unit.cmake  pch.cmake  precommit.cmake  sanitizers.cmake  standalone.cmake  version.cmake
copacabana/cmake/asset/: doxygen-awesome-sidebar-only.css  embed.py  fragment.js  godbolt.js
example/: CMakeLists.txt  CMakePresets.json  example.hpp
example/cmake/: dependencies.cmake  example-config.cmake
example/doc/: Doxyfile  base.html  color.css  index.md  other_page.md
example/include/libexample/: example.hpp
example/src/libexample/: example.hpp  first.hpp  second.hpp
example/test/: CMakeLists.txt
example/test/types/: structure.cpp
example/test/unit/types/: structure.cpp
example/test/unit/values/: value.cpp
example/test/values/: version.cpp
